# tugas_operasi_dasar_sinyal

./: .gitignore  README.md  pyproject.toml
notebook/: operasi_sinyal_citra.ipynb
